# datasci-tfx-sepsis

./: .gitignore  README.md  cleanup.sh  pyproject.toml  requirements.txt  setup.py  setup.sh
.ipynb_checkpoints/: pyproject-checkpoint.toml  requirements-checkpoint.txt  setup-checkpoint.sh
.s2i/: environment
airflow/airflow-setup/: README.md  airflow-values.yaml
airflow/container/: README.md  requirements.txt
app/: README.md  prediction.py  pyproject.toml  requirements.txt  s3_util.py  wsgi.py
code/: vitals_constants.py
dag-image/: README.md  requirements.txt
data/dataSepsis/: pat_demog_labeled-dataSepsis.csv  pat_labs_labeled-dataSepsis.csv  pat_vitals_labeled-dataSepsis.csv  rand_number_generator.numbers
data/new/: pat_vitals_unlabelled-dataSepsis.csv
docs/: cluster_config.md  conf.py  containerization.md  data_ingestion.md  data_validation.md  data_versioning.md  feature_engineering.md  feature_store.md  index.rst  infrastructure_validation.md  log_monitor_alert.md  model_serving.md  model_training.md  model_validation.md  odh-setup.md  opendatahub-kfdef
mlops-prototype/: LICENSE  Makefile  README.md
mlops-prototype/docs/: Makefile  conf.py  make.bat
notebooks/: Untitled.ipynb  data-exploration.ipynb  inference-notebook.ipynb  vitals-septic-prediction-pipeline.ipynb
pipeline/: metadata.sqlite
s3/: README.md  aws-s3-creds.yaml  brownfield-objectbucketclaim.yaml  brownfield-storageclass.yaml  greenfield-objectbucketclaim.yaml  greenfield-storageclass.yaml
scripts/: cleanup.sh  setup.sh
sepsis/: vitals.py  vitals_utils.py
(+220 files in other folders)
