[tool.poetry]
name = "mlops-prototype"
version = "0.1.0"
description = ""
authors = ["Noah Sayre <nsayre@redhat.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.8.0"
pandas = "^1.4.2"
seaborn = "^0.11.2"
sklearn = "^0.0"
xgboost = "^1.5.2"
scikit-image = "^0.19.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
sphinx-rtd-theme = "^1.0.0"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
