[tool.poetry]
name = "sepsis-api"
version = "0.1.0"
description = ""
authors = ["Noah Sayre <nsayre@redhat.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.9.1"
Flask = "^2.1.2"
boto3 = "^1.24.9"
prometheus-client = "^0.14.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
